# AltCraft-tools

./: .gitignore  CMakeLists.txt
MMG/: CMakeLists.txt  README.md  main.c
TransperentProxy/: CMakeLists.txt  README.md  clientside.c  main.c  platform.h  protocol.c  proxy.c  proxy.h  replaymod.c  replaymod.h  serverside.c  sides.h
